--- a/Lychee.Stocks/Lychee.Stocks.Domain/packages.config
+++ b/Lychee.Stocks/Lychee.Stocks.Domain/packages.config
@@ -6,11 +6,17 @@
   <package id="Fizzler.Systems.HtmlAgilityPack" version="1.2.0" targetFramework="net472" />
   <package id="Fizzler.Tools" version="1.1.0" targetFramework="net472" />
   <package id="FSharp.Core" version="4.5.2" targetFramework="net472" />
+  <package id="Google.Apis" version="1.43.0" targetFramework="net472" />
+  <package id="Google.Apis.Auth" version="1.43.0" targetFramework="net472" />
+  <package id="Google.Apis.Core" version="1.43.0" targetFramework="net472" />
+  <package id="Google.Apis.Sheets.v4" version="1.43.0.1832" targetFramework="net472" />
   <package id="HeadlessChromium.Puppeteer.Lambda.Dotnet" version="1.0.1.31" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.12" targetFramework="net472" />
   <package id="Lychee.Infrastructure" version="1.1.0" targetFramework="net472" />
-  <package id="LycheeScrapper.Domain" version="1.2.2" targetFramework="net472" />
+  <package id="LycheeScrapper.Domain" version="1.2.3" targetFramework="net472" />
+  <package id="LycheeScrapper.GoogleAPI.Sheet" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.0.2" targetFramework="net472" />
+  <package id="Microsoft.CodeCoverage" version="16.4.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging" version="2.0.2" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.2" targetFramework="net472" />
