--- a/Lychee.Stocks/Lychee.Stocks.Entities/Lychee.Stocks.Entities.csproj
+++ b/Lychee.Stocks/Lychee.Stocks.Entities/Lychee.Stocks.Entities.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Prediction.cs" />
     <Compile Include="Stock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StockContext.cs" />
