--- a/Lychee.Stocks/Lychee.Stocks/Web.config
+++ b/Lychee.Stocks/Lychee.Stocks/Web.config
@@ -20,7 +20,7 @@
   </appSettings>
   <connectionStrings>
     <add name="ConnectionString.MsSql" connectionString="server=localhost;uid=sa;pwd=1234567890a!;database=Stocks" providerName="System.Data.SqlClient" />
-    <add name="Scrapper.ConnectionString.Access" connectionString="Provider=Microsoft.ACE.OleDb.12.0;Data source=C:\Cawi\DEV\Lychee\Lychee.Scrapper\Lychee.Scrapper\Lychee.Scrapper.Test\PesobilityScrapper\Pesobility.accdb" providerName="JetEntityFrameworkProvider" />
+    <add name="Scrapper.ConnectionString.MsSql" connectionString="server=localhost;uid=sa;pwd=1234567890a!;database=Scrapper" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
@@ -75,13 +75,6 @@
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-      <provider invariantName="JetEntityFrameworkProvider" type="JetEntityFrameworkProvider.JetProviderServices, JetEntityFrameworkProvider" />
     </providers>
   </entityFramework>
-  <system.data>
-    <DbProviderFactories>
-      <remove invariant="JetEntityFrameworkProvider" />
-      <add invariant="JetEntityFrameworkProvider" name="Jet Entity Framework Provider" description="Jet Entity Framework Provider" type="JetEntityFrameworkProvider.JetProviderFactory, JetEntityFrameworkProvider" />
-    </DbProviderFactories>
-  </system.data>
 </configuration>
