--- a/Lychee.Stocks/Lychee.Stocks.Entities/Lychee.Stocks.Entities.csproj
+++ b/Lychee.Stocks/Lychee.Stocks.Entities/Lychee.Stocks.Entities.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StockContext.cs" />
     <Compile Include="StockHistory.cs" />
+    <Compile Include="StockTrendReportModel.cs" />
     <Compile Include="TechnicalAnalysis.cs" />
   </ItemGroup>
   <ItemGroup>
