--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ Lychee.Stocks/packages/
 Lychee.Stocks/Lychee.Stocks/bin/
 Lychee.Stocks/Lychee.Stocks.Domain/bin/
 Lychee.Stocks/.vs/
+Lychee.Stocks/Lychee.Stocks.Test/bin/
+Lychee.Stocks/Lychee.Stocks.Test/chromium-78.0.3882.0.br
+Lychee.Stocks/Lychee.Stocks.Test/obj/Debug/Lychee.Stocks.Test.csproj.FileListAbsolute.txt
