--- a/Lychee.Stocks/Lychee.Stocks.Domain/Lychee.Stocks.Domain.csproj
+++ b/Lychee.Stocks/Lychee.Stocks.Domain/Lychee.Stocks.Domain.csproj
@@ -80,6 +80,9 @@
     <Reference Include="Lychee.Caching, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Lychee.Caching.1.0.1\lib\net40\Lychee.Caching.dll</HintPath>
     </Reference>
+    <Reference Include="Lychee.CommonHelper, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Lychee.CommonHelper.1.0.0\lib\net40\Lychee.CommonHelper.dll</HintPath>
+    </Reference>
     <Reference Include="Lychee.Domain, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Lychee.Domain.1.0.0\lib\net40\Lychee.Domain.dll</HintPath>
     </Reference>
@@ -93,7 +96,7 @@
       <HintPath>..\packages\Lychee.HttpClientService.1.4.0\lib\net40\Lychee.HttpClientService.dll</HintPath>
     </Reference>
     <Reference Include="Lychee.Infrastructure, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Lychee.Infrastructure.1.4.0\lib\net40\Lychee.Infrastructure.dll</HintPath>
+      <HintPath>..\packages\Lychee.Infrastructure.1.4.2\lib\net40\Lychee.Infrastructure.dll</HintPath>
     </Reference>
     <Reference Include="Lychee.Scrapper.Domain, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\LycheeScrapper.Domain.1.2.6\lib\net40\Lychee.Scrapper.Domain.dll</HintPath>
@@ -144,6 +147,9 @@
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Omu.ValueInjecter, Version=3.2.0.0, Culture=neutral, PublicKeyToken=5692a4ecdffbe736, processorArchitecture=MSIL">
+      <HintPath>..\packages\ValueInjecter.3.2.0\lib\net45\Omu.ValueInjecter.dll</HintPath>
     </Reference>
     <Reference Include="PuppeteerSharp, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\PuppeteerSharp.1.20.0\lib\netstandard2.0\PuppeteerSharp.dll</HintPath>
@@ -326,14 +332,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\CacheNames.cs" />
     <Compile Include="Constants\SettingNames.cs" />
     <Compile Include="Constants\UrlConstants.cs" />
     <Compile Include="Enums\StockTypes.cs" />
+    <Compile Include="Exception\InvestagramsException.cs" />
     <Compile Include="Helpers\StockExtension.cs" />
     <Compile Include="Interfaces\Repositories\IInvestagramsApiRepository.cs" />
     <Compile Include="Interfaces\Repositories\IStockDataRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IBlockSaleStockRepository.cs" />
+    <Compile Include="Interfaces\Repositories\ISuspendedStockRepository.cs" />
+    <Compile Include="Interfaces\Services\IPredictionService.cs" />
     <Compile Include="Interfaces\Services\IStockService.cs" />
     <Compile Include="Models\Investagrams\FundamentalAnalysisInfo.cs" />
+    <Compile Include="Models\Investagrams\InvestagramsResponseBase.cs" />
     <Compile Include="Models\Investagrams\LatestStockMarketActivityVM.cs" />
     <Compile Include="Models\Investagrams\LatestStockHistory.cs" />
     <Compile Include="Models\Investagrams\StockInfo.cs" />
@@ -346,6 +358,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\InvestagramsApiRepository.cs" />
     <Compile Include="Repositories\StocksScrappedSettingRepository.cs" />
+    <Compile Include="Repositories\BlockSaleStockRepository.cs" />
+    <Compile Include="Repositories\SuspendedStockRepository.cs" />
+    <Compile Include="Services\PredictionService.cs" />
     <Compile Include="Services\StockService.cs" />
   </ItemGroup>
   <ItemGroup>
