--- a/Lychee.Stocks/Lychee.Stocks.Domain/packages.config
+++ b/Lychee.Stocks/Lychee.Stocks.Domain/packages.config
@@ -14,10 +14,11 @@
   <package id="HtmlAgilityPack" version="1.11.12" targetFramework="net472" />
   <package id="LazyCache" version="2.0.4" targetFramework="net472" />
   <package id="Lychee.Caching" version="1.0.1" targetFramework="net472" />
+  <package id="Lychee.CommonHelper" version="1.0.0" targetFramework="net472" />
   <package id="Lychee.Domain" version="1.0.0" targetFramework="net472" />
   <package id="Lychee.Entities" version="1.0.0" targetFramework="net472" />
   <package id="Lychee.HttpClientService" version="1.4.0" targetFramework="net472" />
-  <package id="Lychee.Infrastructure" version="1.4.0" targetFramework="net472" />
+  <package id="Lychee.Infrastructure" version="1.4.2" targetFramework="net472" />
   <package id="LycheeScrapper.Domain" version="1.2.6" targetFramework="net472" />
   <package id="LycheeScrapper.GoogleAPI.Sheet" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.0.2" targetFramework="net472" />
@@ -93,4 +94,5 @@
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net472" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net472" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net472" />
+  <package id="ValueInjecter" version="3.2.0" targetFramework="net472" />
 </packages>
