--- a/Lychee.Stocks/Lychee.Stocks/Web.config
+++ b/Lychee.Stocks/Lychee.Stocks/Web.config
@@ -27,7 +27,7 @@
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <system.net>
-    <defaultProxy enabled="true">
+    <defaultProxy enabled="false">
       <proxy autoDetect="False" bypassonlocal="False" usesystemdefault="False" proxyaddress="http://127.0.0.1:8888" />
     </defaultProxy>
   </system.net>
