--- a/Lychee.Stocks/Lychee.Stocks/packages.config
+++ b/Lychee.Stocks/Lychee.Stocks/packages.config
@@ -14,10 +14,11 @@
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
   <package id="LazyCache" version="2.0.4" targetFramework="net472" />
   <package id="Lychee.Caching" version="1.0.1" targetFramework="net472" />
+  <package id="Lychee.CommonHelper" version="1.0.0" targetFramework="net472" />
   <package id="Lychee.Domain" version="1.0.0" targetFramework="net472" />
   <package id="Lychee.Entities" version="1.0.0" targetFramework="net472" />
   <package id="Lychee.HttpClientService" version="1.4.0" targetFramework="net472" />
-  <package id="Lychee.Infrastructure" version="1.4.0" targetFramework="net472" />
+  <package id="Lychee.Infrastructure" version="1.4.2" targetFramework="net472" />
   <package id="LycheeScrapper.Domain" version="1.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
