--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ Lychee.Stocks/.vs/
 Lychee.Stocks/Lychee.Stocks.Test/bin/
 Lychee.Stocks/Lychee.Stocks.Test/chromium-78.0.3882.0.br
 Lychee.Stocks/Lychee.Stocks.Test/obj/Debug/Lychee.Stocks.Test.csproj.FileListAbsolute.txt
+Lychee.Stocks.InvestagramsApi/packages/System.Reflection.Emit.Lightweight.4.3.0/lib/xamarinwatchos10/_._
+Lychee.Stocks.InvestagramsApi/packages/
+Lychee.Stocks.InvestagramsApi/.vs/
+Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi.Test/bin/
+Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi/bin/
+Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi/obj/Debug/Lychee.Stocks.InvestagramsApi.csproj.FileListAbsolute.txt
