Refactor code in investagrams api. Use cookie provider Added simple injector

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Lychee.Stocks.InvestagramsApi/.vs/
 Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi.Test/bin/
 Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi/bin/
 Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi/obj/Debug/Lychee.Stocks.InvestagramsApi.csproj.FileListAbsolute.txt
+Lychee.Stocks/Lychee.Stocks/obj/
