--- a/Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi.csproj
+++ b/Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi.csproj
@@ -34,13 +34,22 @@
     <Reference Include="Lychee.Models, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Lychee.Models.1.0.0\lib\net40\Lychee.Models.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.1.0.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
+    </Reference>
     <Reference Include="RestSharp, Version=106.11.4.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
       <HintPath>..\packages\RestSharp.106.11.4\lib\net452\RestSharp.dll</HintPath>
     </Reference>
+    <Reference Include="SimpleInjector, Version=5.0.0.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
+      <HintPath>..\packages\SimpleInjector.5.0.1\lib\net461\SimpleInjector.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Threading.Tasks.Extensions, Version=4.1.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.4.0\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.2\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.2\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.4.0\lib\net47\System.ValueTuple.dll</HintPath>
@@ -60,10 +69,11 @@
     <Compile Include="Constants\UrlConstants.cs" />
     <Compile Include="Enums\OrderVerb.cs" />
     <Compile Include="Interfaces\ICalendarApiRepository.cs" />
-    <Compile Include="Interfaces\IInvestagramsRestSharpBaseRepository.cs" />
+    <Compile Include="Interfaces\ICookieProviderService.cs" />
     <Compile Include="Interfaces\ISocialApiRepository.cs" />
     <Compile Include="Interfaces\IStockApiRepository.cs" />
     <Compile Include="Interfaces\IInvestagramsApiService.cs" />
+    <Compile Include="InvestagramsApiServiceModule.cs" />
     <Compile Include="Models\Calendar\CalendarOverview.cs" />
     <Compile Include="Models\Social\TrendingStocks.cs" />
     <Compile Include="Models\Stocks\AskAndBid.cs" />
@@ -83,9 +93,11 @@
     <Compile Include="Repositories\SocialApiRepository.cs" />
     <Compile Include="Repositories\StockApiRepository.cs" />
     <Compile Include="Repositories\InvestagramsRestsharpBaseRepository.cs" />
+    <Compile Include="Services\CookieProviderService.cs" />
     <Compile Include="Services\InvestagramsApiService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Lychee.Stocks.InvestagramsApi.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
