--- a/Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi.nuspec
+++ b/Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi.nuspec
@@ -2,20 +2,21 @@
 <package >
   <metadata>
     <id>Lychee.Stocks.InvestagramsApi</id>
-    <version>1.0.0</version>
+    <version>1.1.0</version>
     <title>Lychee.Stocks.InvestagramsApi</title>
     <authors>Cornelio Cawicaan Jr.</authors>
     <owners>Cornelio Cawicaan Jr.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <license type="expression">MIT</license>
     <description>Api wrapper to connect to Investagrams api</description>
-    <releaseNotes></releaseNotes>
+    <releaseNotes>Added simple injector</releaseNotes>
     <copyright>Copyright 2020</copyright>
     <tags>Lychee Stock Investagrams</tags>
     <dependencies>
       <dependency id="Lychee.Models" version="1.0" />
       <dependency id="RestSharp" version="106.11" />
       <dependency id="Utf8Json" version="1.3" />
+      <dependency id="SimpleInjector" version="5.0" />
     </dependencies>
   </metadata>
   <files>
