--- a/Lychee.Stocks/Lychee.Stocks/packages.config
+++ b/Lychee.Stocks/Lychee.Stocks/packages.config
@@ -19,6 +19,8 @@
   <package id="Lychee.Entities" version="1.0.0" targetFramework="net472" />
   <package id="Lychee.HttpClientService" version="1.4.0" targetFramework="net472" />
   <package id="Lychee.Infrastructure" version="1.4.2" targetFramework="net472" />
+  <package id="Lychee.Models" version="1.0.0" targetFramework="net472" />
+  <package id="Lychee.Stocks.InvestagramsApi" version="1.1.0" targetFramework="net472" />
   <package id="LycheeScrapper.Domain" version="1.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
@@ -29,6 +31,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.0.2" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Caching.Memory" version="2.1.0" targetFramework="net472" />
@@ -48,13 +51,14 @@
   <package id="PuppeteerSharp" version="1.20.0" targetFramework="net472" />
   <package id="PuppeteerSharp.Contrib.Extensions" version="1.0.0" targetFramework="net472" />
   <package id="PuppeteerSharp.Contrib.Should" version="1.0.0" targetFramework="net472" />
+  <package id="RestSharp" version="106.11.4" targetFramework="net472" />
   <package id="Serilog" version="2.8.0" targetFramework="net472" />
   <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net472" />
   <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net472" />
-  <package id="SimpleInjector" version="4.9.0" targetFramework="net472" />
-  <package id="SimpleInjector.Integration.Web" version="4.8.1" targetFramework="net472" />
-  <package id="SimpleInjector.Integration.Web.Mvc" version="4.8.1" targetFramework="net472" />
-  <package id="SimpleInjector.Packaging" version="4.8.1" targetFramework="net472" />
+  <package id="SimpleInjector" version="5.0.0" targetFramework="net472" />
+  <package id="SimpleInjector.Integration.Web" version="5.0.0" targetFramework="net472" />
+  <package id="SimpleInjector.Integration.Web.Mvc" version="5.0.0" targetFramework="net472" />
+  <package id="SimpleInjector.Packaging" version="5.0.0" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.Collections" version="4.3.0" targetFramework="net472" />
@@ -79,11 +83,13 @@
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
@@ -99,10 +105,11 @@
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net472" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net472" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net472" />
+  <package id="Utf8Json" version="1.3.7" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
