--- a/Lychee.Stocks/Lychee.Stocks.Domain/Lychee.Stocks.Domain.csproj
+++ b/Lychee.Stocks/Lychee.Stocks.Domain/Lychee.Stocks.Domain.csproj
@@ -84,7 +84,7 @@
       <HintPath>..\packages\Lychee.CommonHelper.1.0.0\lib\net40\Lychee.CommonHelper.dll</HintPath>
     </Reference>
     <Reference Include="Lychee.Domain, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Lychee.Domain.1.0.0\lib\net40\Lychee.Domain.dll</HintPath>
+      <HintPath>..\packages\Lychee.Domain.1.0.1\lib\net40\Lychee.Domain.dll</HintPath>
     </Reference>
     <Reference Include="Lychee.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Lychee.Entities.1.0.0\lib\net40\Lychee.Entities.dll</HintPath>
@@ -97,6 +97,9 @@
     </Reference>
     <Reference Include="Lychee.Infrastructure, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Lychee.Infrastructure.1.4.2\lib\net40\Lychee.Infrastructure.dll</HintPath>
+    </Reference>
+    <Reference Include="Lychee.Models, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Lychee.Models.1.0.0\lib\net40\Lychee.Models.dll</HintPath>
     </Reference>
     <Reference Include="Lychee.Scrapper.Domain, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\LycheeScrapper.Domain.1.2.6\lib\net40\Lychee.Scrapper.Domain.dll</HintPath>
