--- a/Lychee.Stocks/Lychee.Stocks/packages.config
+++ b/Lychee.Stocks/Lychee.Stocks/packages.config
@@ -15,7 +15,7 @@
   <package id="LazyCache" version="2.0.4" targetFramework="net472" />
   <package id="Lychee.Caching" version="1.0.1" targetFramework="net472" />
   <package id="Lychee.CommonHelper" version="1.0.0" targetFramework="net472" />
-  <package id="Lychee.Domain" version="1.0.0" targetFramework="net472" />
+  <package id="Lychee.Domain" version="1.0.6" targetFramework="net472" />
   <package id="Lychee.Entities" version="1.0.0" targetFramework="net472" />
   <package id="Lychee.HttpClientService" version="1.4.0" targetFramework="net472" />
   <package id="Lychee.Infrastructure" version="1.4.2" targetFramework="net472" />
@@ -111,5 +111,6 @@
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net472" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net472" />
   <package id="Utf8Json" version="1.3.7" targetFramework="net472" />
+  <package id="ValueInjecter" version="3.2.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
