Should I buy this Stock? Initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi.Test/bin/
 Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi/bin/
 Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi/obj/Debug/Lychee.Stocks.InvestagramsApi.csproj.FileListAbsolute.txt
 Lychee.Stocks/Lychee.Stocks/obj/
+Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi.Test/obj/
+Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi/obj/
+Lychee.Stocks/Lychee.Stocks.Domain/obj/
