--- a/Lychee.Stocks/Lychee.Stocks.Domain/packages.config
+++ b/Lychee.Stocks/Lychee.Stocks.Domain/packages.config
@@ -15,14 +15,16 @@
   <package id="LazyCache" version="2.0.4" targetFramework="net472" />
   <package id="Lychee.Caching" version="1.0.1" targetFramework="net472" />
   <package id="Lychee.CommonHelper" version="1.0.0" targetFramework="net472" />
-  <package id="Lychee.Domain" version="1.0.1" targetFramework="net472" />
+  <package id="Lychee.Domain" version="1.1.1" targetFramework="net472" />
   <package id="Lychee.Entities" version="1.0.0" targetFramework="net472" />
   <package id="Lychee.HttpClientService" version="1.4.0" targetFramework="net472" />
   <package id="Lychee.Infrastructure" version="1.4.2" targetFramework="net472" />
   <package id="Lychee.Models" version="1.0.0" targetFramework="net472" />
+  <package id="Lychee.Stocks.InvestagramsApi" version="1.4.1" targetFramework="net472" />
   <package id="LycheeScrapper.Domain" version="1.2.6" targetFramework="net472" />
   <package id="LycheeScrapper.GoogleAPI.Sheet" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.0.2" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeCoverage" version="16.4.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Caching.Memory" version="2.1.0" targetFramework="net472" />
@@ -40,12 +42,13 @@
   <package id="PuppeteerSharp" version="1.20.0" targetFramework="net472" />
   <package id="PuppeteerSharp.Contrib.Extensions" version="1.0.0" targetFramework="net472" />
   <package id="PuppeteerSharp.Contrib.Should" version="1.0.0" targetFramework="net472" />
+  <package id="RestSharp" version="106.11.2" targetFramework="net472" />
   <package id="Serilog" version="2.8.0" targetFramework="net472" />
   <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net472" />
   <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net472" />
-  <package id="SimpleInjector" version="4.9.0" targetFramework="net472" />
-  <package id="SimpleInjector.Integration.Web" version="4.8.1" targetFramework="net472" />
-  <package id="SimpleInjector.Packaging" version="4.8.1" targetFramework="net472" />
+  <package id="SimpleInjector" version="5.0.0" targetFramework="net472" />
+  <package id="SimpleInjector.Integration.Web" version="5.0.0" targetFramework="net472" />
+  <package id="SimpleInjector.Packaging" version="5.0.0" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.Collections" version="4.3.0" targetFramework="net472" />
@@ -70,11 +73,13 @@
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
@@ -90,10 +95,11 @@
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net472" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net472" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net472" />
+  <package id="Utf8Json" version="1.3.0" targetFramework="net472" />
   <package id="ValueInjecter" version="3.2.0" targetFramework="net472" />
 </packages>
