--- a/Lychee.Stocks/Lychee.Stocks.Domain/Lychee.Stocks.Domain.csproj
+++ b/Lychee.Stocks/Lychee.Stocks.Domain/Lychee.Stocks.Domain.csproj
@@ -308,17 +308,9 @@
     <Compile Include="Interfaces\Services\IPredictionService.cs" />
     <Compile Include="Interfaces\Services\IStockScoreService.cs" />
     <Compile Include="Interfaces\Services\IStockService.cs" />
+    <Compile Include="Models\ReasonScore.cs" />
     <Compile Include="StockDomainModule.cs" />
-    <Compile Include="Models\Investagrams\FundamentalAnalysisInfo.cs" />
-    <Compile Include="Models\Investagrams\InvestagramsResponseBase.cs" />
-    <Compile Include="Models\Investagrams\LatestStockMarketActivityVM.cs" />
-    <Compile Include="Models\Investagrams\LatestStockHistory.cs" />
-    <Compile Include="Models\Investagrams\StockInfo.cs" />
-    <Compile Include="Models\Investagrams\StockScore.cs" />
-    <Compile Include="Models\Investagrams\TechnicalAnalysisInfo.cs" />
-    <Compile Include="Models\Investagrams\ViewStock.cs" />
-    <Compile Include="Models\InvestaViewStockResponse.cs" />
-    <Compile Include="Models\InvestaBaseApiResponse.cs" />
+    <Compile Include="Models\StockScore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\StockHistoryRepository.cs" />
     <Compile Include="Repositories\BlockSaleStockRepository.cs" />
