-Suspended stocks -Block sales -Trending now -handle expired cookie from the api -Caching of result -cleanups

--- a/Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi.csproj
+++ b/Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Compile Include="Constants\UrlConstants.cs" />
     <Compile Include="Enums\OrderVerb.cs" />
+    <Compile Include="Exceptions\InvestagramApiException.cs" />
     <Compile Include="Interfaces\ICalendarApiRepository.cs" />
     <Compile Include="Interfaces\ICookieProviderService.cs" />
     <Compile Include="Interfaces\ISocialApiRepository.cs" />
